# aion-search-reimp

./: .gitignore  README.md  architecture.md  pyproject.toml
cluster/: script_derive_qwen_caches.sh  script_phase0.sh  script_phase1.sh  script_phase1_diag_nested.sh  script_phase1_extractor_diagnostic.sh  script_phase1_nested.sh  script_phase2_smoke.sh  script_phase3_10k.sh  script_phase3_seedext.sh  script_phase6_crossmatch.sh  script_phase6_crossmatch_preflight.sh  script_phase6_distance_retrieval.sh  script_phase6_multimodal_prepare.sh  script_phase6_multimodal_run.sh  script_phase6_paired_analyze.sh  script_phase6_paired_preflight.sh  script_phase6_paired_prepare.sh  script_phase6_probes.sh  script_phase6_probes_full.sh  script_wait_artifacts.sh  script_wait_phase1_inputs.sh  submit_sequential.sh
configs/: phase0_reference.yaml  phase1.yaml  phase1_nested.yaml  phase1_open_text.yaml  phase2_smoke.yaml  phase3_10k.yaml  phase3_10k_seedext.yaml  phase6_crossmatch.yaml  phase6_crossmatch_morphology.yaml  phase6_multimodal_retrieval.yaml  phase6_paired_redshift.yaml  phase6_prechecks.yaml  phase6_probes.yaml
data/cache/query_embeddings/: r_oai_queries_v1.parquet  r_oai_queries_v1.parquet.meta.json
data/caption_screen_64/: caption_screen_exclusions.csv  caption_screen_labels.parquet
data/gates/: phase2_launch_contract_v1.json
data/phase1/: caption_screen_64_image_preflight_v1.json  full_caption_artifacts_v2.lineage.json  gemma_extractor_calibration_v1.jsonl  gpt41mini_freeform_64_cost_v1.json  gpt41mini_freeform_64_full_v2.jsonl  gpt41mini_freeform_64_usage_v1.jsonl  gpt41mini_freeform_64_v1.jsonl  gpt41mini_freeform_64_v1_errors.jsonl  qwen3vl8b_freeform_64_full_v2.jsonl
data/prompts/: galaxybench_galaxyzoo_judge_released_v1.txt  phase1_freeform_caption_v1.txt  phase1_gemma_extractor_v1.txt  qwen_caption_v1.txt  qwen_caption_v2.txt  qwen_retrieval_summary_v1.txt
data/queries/: retrieval_queries_v1.yaml
scripts/: build_phase2_launch_contract.py  derive_phase1_full_captions.py  derive_qwen_embedding_caches.py  download_artifacts.py  prepare_phase0_data.py  run_phase0_cluster.py  run_phase1_cluster.py  run_phase1_extractor_diagnostic.py  run_phase1_gemini_crossjudge.py  run_phase1_gpt_local.py  run_phase2_smoke_cluster.py  run_phase3_10k_cluster.py  run_phase3_seedext_cluster.py  run_phase6_crossmatch_cluster.py  run_phase6_multimodal_retrieval.py  run_phase6_paired_redshift_cluster.py  run_phase6_prechecks.py  run_phase6_probes_cluster.py
src/aion_reimp/: __init__.py  artifacts.py  cache.py  caption_audit.py  captioning.py  cli.py  config.py  datasets.py  evaluate.py  launch_contract.py  manifest.py  metrics.py  model.py  morphology.py  multimodal_retrieval.py  reference.py  retrieval.py  seedext.py  smoke.py  text_embeddings.py  training.py  utils.py
src/spec_probes/: __init__.py  config.py  encoders.py  morphology_coverage.py  paired.py  probe_metrics.py  probes.py  run_probes.py  specformer_model.py  spectra_data.py
src/spectra_crossmatch/: __init__.py  config.py  crossmatch.py  source.py
tests/: test_cache.py  test_caption_audit.py  test_config.py  test_evaluate_folds.py  test_launch_contract.py  test_manifest.py  test_metrics.py  test_model_config.py  test_multimodal_retrieval.py  test_openrouter_captioner.py  test_reference_equivalence_cluster.py  test_reference_freeze.py  test_reference_gate.py  test_seedext_base_validation.py  test_smoke_cache_only.py  test_spec_probes_artifacts.py  test_spec_probes_config.py  test_spec_probes_encoders.py  test_spec_probes_metrics.py  test_spec_probes_morphology_coverage.py  test_spec_probes_paired.py  test_spec_probes_preflight_gate.py  test_spec_probes_probes.py  test_spec_probes_run_probes.py  test_spec_probes_specformer_model.py  test_spec_probes_split.py  test_spectra_crossmatch.py  test_text_embeddings.py  test_training.py
