[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-search-reimp"
version = "0.1.0"
description = "Independent open-model reimplementation of AION-Search"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12",
  "PyYAML>=6",
  "scipy>=1.10",
  "torch>=2.1",
]

[project.optional-dependencies]
cluster = [
  "datasets>=2.19",
  "huggingface-hub>=0.24",
  "openai>=1.30",
  "Pillow>=10",
  "safetensors>=0.4",
  "transformers>=5.12.1",
]
test = ["pytest>=8"]

[project.scripts]
aion-reimp = "aion_reimp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "cluster: requires downloaded model or dataset artifacts and must run on the cluster",
]
