[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-search-reimp"
version = "0.1.0"
description = "Independent open-model reimplementation of AION-Search"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12",
  "pydantic>=2.7,<3",
  "PyYAML>=6",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "torch>=2.1",
]

[project.optional-dependencies]
cluster = [
  "accelerate>=1.14",
  "datasets>=2.19",
  "huggingface-hub>=0.24",
  # Required to deserialize the upstream SpecFormer checkpoint metadata,
  # which stores hyperparameters as lightning.fabric AttributeDict.
  "lightning==2.6.5",
  # Phase-6 HATS crossmatch. This release requires Python >=3.11; it is
  # loaded only in the THQL Python 3.11 environment, never by local tests.
  "lsdb==0.9.2",
  "openai>=1.30",
  "Pillow>=10",
  "safetensors>=0.4",
  "transformers>=5.12.1",
  "xgrammar>=0.2.3,<0.3",
  # spec_probes (Phase 6): AION-1 frozen encoder, pip name "polymathic-aion"
  # (import name `aion`), verified 2026-07-18 against
  # https://github.com/PolymathicAI/AION and https://pypi.org/project/polymathic-aion/
  # (latest release 0.0.2). AstroCLIP SpecFormer is loaded via
  # huggingface-hub into the vendored architecture in
  # src/spec_probes/specformer_model.py; Lightning is needed only to
  # deserialize the checkpoint's AttributeDict metadata.
  "polymathic-aion==0.0.2",
]
test = ["pytest>=8"]

[project.scripts]
aion-reimp = "aion_reimp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "cluster: requires downloaded model or dataset artifacts and must run on the cluster",
]
